--- a/vignettes/articles/HectorSummary.Rmd
+++ b/vignettes/articles/HectorSummary.Rmd
@@ -2,14 +2,10 @@
 title: "Hector general summary"
 author: "Leeya Pressburger"
 date: "9/29/2021"
-output:
-  html_document:
-    toc: yes
-    toc_float: true
 ---
 
 ## Introduction to Hector
-Hector is an open source, object-oriented, simple global carbon cycle model. As a simple climate model, Hector runs very quickly while still representing the most critical global earth system processes. Hector is the default carbon cycle module for the integrated assessment model GCAM (Global Change Assessment Model). Its open-source nature and modular design allows the user to edit input files and code, meaning a user could design a new submodel to answer a particular science question. Hector can accurately reproduce historical trends and future projections of atmospheric CO~2~, radiative forcing, and global temperature change under the four RCPs^[Hartin, C. A., Patel, P., Schwarber, A., Link, R. P., and Bond-Lamberty, B. P. (2015). A simple object-oriented and open-source model for scientific and policy analyses of the global climate system – Hector v1.0, Geosci. Model Dev., 8, 939–955. https://doi.org/10.5194/gmd-8-939-2015.] and SSPs.
+Hector is an open-source, object-oriented, simple global carbon cycle model. As a simple climate model, Hector runs very quickly while still representing the most critical global earth system processes. Hector is the default carbon cycle module for the integrated assessment model GCAM (Global Change Assessment Model). Its open-source nature and modular design allows the user to edit input files and code, meaning a user could design a new submodel to answer a particular science question. Hector can accurately reproduce historical trends and future projections of atmospheric CO~2~, radiative forcing, and global temperature change under the four RCPs^[Hartin, C. A., Patel, P., Schwarber, A., Link, R. P., and Bond-Lamberty, B. P. (2015). A simple object-oriented and open-source model for scientific and policy analyses of the global climate system – Hector v1.0, Geosci. Model Dev., 8, 939–955. https://doi.org/10.5194/gmd-8-939-2015.] and SSPs.
 
 Hector contains a well-mixed global atmosphere, an ocean component, and a land component composed of vegetation, detritus, and soil. Briefly, terrestrial vegetation, detritus, and soil are linked with each other and the atmosphere by first-order differential equations. Carbon flows from vegetation to detritus to soil, losing fractional amounts to heterotrophic respiration. For more details on the terrestrial carbon cycle, please reference ["The model's terrestrial carbon cycle"](https://jgcri.github.io/hector/articles/manual/SimpleNBox.html). Note that Hector's fundamental time step is one year, but the carbon cycle can be scaled to a finer resolution if necessary.^[Hartin et al., 2015.] The ocean component consists of four boxes: two surface boxes, one high-latitude and the other low-latitude, one intermediate, and one deep box. The cold high-latitude (>55$^◦$) box makes up 15% of the ocean surface area and the warm low-latitude box (>55$^◦$) makes up the remaining 85%. Ocean temperatures are linearly related to the global atmospheric temperature change; this temperature gradient causes a flux of carbon into the high-latitude box and a flux of carbon out of the warm low-latitude box.^[Vega-Westhoff, B., Sriver, R. L., Hartin, C. A., Wong, T. E., & Keller, K. (2019). Impacts of observational constraints related to sea level on estimates of climate sensitivity. Earth's Future, 7, 677– 690. https://doi.org/10.1029/2018EF001082]
 
