--- a/vignettes/articles/BuildHector.Rmd
+++ b/vignettes/articles/BuildHector.Rmd
@@ -1,6 +1,8 @@
-# Installing and building Hector
+---
+title: "Installing and building Hector"
+---
 
-There are lots of ways to use Hector: as a stand alone executable, through the UI, and as an R package. Here we provide installation and building instructions for the R Hector package and the executable. 
+There are lots of ways to use Hector: as a stand-alone executable, through the UI, and as an R package. Here we provide installation and building instructions for the R Hector package and the executable. 
 
 # R Hector 
 
@@ -79,7 +81,7 @@ following environment variables:
 This variable should contain the full name of a directory with `include/` and
 `lib/` subdirectories that contain, respectively, the Boost header and library 
 files. If you installed Boost using a package manager, this is likely where
-it is. If you built Boost from source, or used [Homebrew](https://brew.sh/) to
+it is. If you built Boost from source or used [Homebrew](https://brew.sh/) to
 install Boost), then you will need to set this variable explicitly. 
 
 Alternatively, if the header and library locations are not subdirectories of
@@ -155,12 +157,12 @@ ini_to_core_reader.cpp:159:17: error: 'path' is unavailable: introduced in macOS
 
 ```
 
-In this case you can set the environment variables:
+In this case, you can set the environment variables:
 ```
 export NO_CXX17=1
 ```
 
-In addition you will need to [Compile Boost Libraries](https://www.boost.org/doc/libs/1_77_0/more/getting_started/unix-variants.html) at the minimum `system` and `filesystem`.  Finally ensure that the environment variable `BOOSTROOT` or `BOOSTLIB` is set properly so that Hector is able to find the compiled Boost libraries.
+In addition, you will need to [Compile Boost Libraries](https://www.boost.org/doc/libs/1_77_0/more/getting_started/unix-variants.html) at the minimum `system` and `filesystem`.  Finally, ensure that the environment variable `BOOSTROOT` or `BOOSTLIB` is set properly so that Hector is able to find the compiled Boost libraries.
 
 #### Running Hector
 
@@ -182,7 +184,7 @@ and then
 These directions assume a basic familiarity with Xcode and Mac OS X software installation.
 
 * Install [Xcode](https://developer.apple.com/xcode/downloads/) if necessary. Hector has been built and tested with Mac OS >= 10.8.5. The project files are for Xcode 11.3.1.
-* Download and install Boost, following instructions above.
+* Download and install Boost, following the instructions above.
 * Download the [Hector zip file](https://github.com/JGCRI/hector/archive/master.zip) or check out the repository using Git.
 * From Xcode, open the project file in `project_files/Xcode/hector.xcodeproj`.
 
@@ -191,7 +193,7 @@ This means that developers and users can set these paths without overwriting eac
 
 * You will need to set several custom paths (Preferences -> Locations -> Custom Paths): `BOOSTROOT`, and `HECTORDIR`.
     * `BOOSTROOT` is the root directory where the Boost headers can be found in `boost/`.  
-    * `HECTORDIR` should be set to root directory for the model (the repository root) Xcode will use this path to the ini files used by the various schemes and to write the csv files to the output directory. 
+    * `HECTORDIR` should be set to root directory for the model (the repository root) Xcode will use this path to the ini files used by the various schemes and write the csv files to the output directory. 
 
 * If you want to build Hector's testing framework (the `hector-tests` target; this is optional and only relevant for C++ developers) add GTEST and GTESTLIB custom paths to Xcode; these are analogous to their Boost counterparts. You will need to install [googletest](https://github.com/google/googletest) on your machine.
 
@@ -212,14 +214,14 @@ Xcode Resources
 ## Visual Studio Code (Windows)
 
 * Install [Visual Studio Code](https://code.visualstudio.com/download), if necessary.
-* Download and install *Boost*, following instructions above.
+* Download and install *Boost*, following the instructions above.
 * Download the [Hector zip file](https://github.com/JGCRI/hector/archive/master.zip) or check out the repository using Git.
 * Open Hector in the visual studio code IDE, build Hector with Terminal --> Run Build Task or with a `make hector` call in VSC terminal window. 
 * Run --> Start Debugging or Run Without Debugging or with `./src/hector ./inst/input/name-of-ini.ini` in the VSC terminal window. 
 
 ## Visual Studio / Microsoft Visual C++
 
-* Install [Visual Studio](https://visualstudio.microsoft.com/vs/community/) and be sure to the Visual C++ add on as well.
+* Install [Visual Studio](https://visualstudio.microsoft.com/vs/community/) and be sure to the Visual C++ add-on as well.
 * Download and install [Boost](https://www.boost.org).
 * Set the environment variables:
   * `BOOSTROOT` to the location to which you installed Boost (e.g. `C:\boost_1_75_0`)
